fix : css for overflowing table fields

--- a/clinic-manager-app/wwwroot/css/site.css
+++ b/clinic-manager-app/wwwroot/css/site.css
@@ -190,19 +190,6 @@ app {
     min-width: 700px;
 }
 
-td.overflowing-hidden {
-    max-width: 150px;
-    max-height: 150px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-td.overflowing-word-wrapped {
-    max-width: 150px;
-    max-height: 150px;
-    word-wrap: break-word;
-}
-
 .row {
     width: 100%;
     display: flex;
